[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grudarin"
version = "1.0.0"
description = "Passive network observability with a live force-directed graph and Markdown reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scapy>=2.5.0",
  "psutil>=5.9.0"
]

[project.scripts]
grudarin = "grudarin_app.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
grudarin_app = ["assets/*.ppm"]
